--- a/project/composer.json
+++ b/project/composer.json
@@ -18,9 +18,9 @@
         "composer/installers": "^2.0",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.3",
-        "drupal/core-composer-scaffold": "^10.0",
-        "drupal/core-project-message": "^10.0",
-        "drupal/core-recommended": "^10.0",
+        "drupal/core-composer-scaffold": "10.0.9",
+        "drupal/core-project-message": "10.0.9",
+        "drupal/core-recommended": "10.0.9",
         "drupal/devel": "^5.1",
         "drush/drush": "^11.5"
     },
