--- a/project/config/sync/core.entity_form_display.node.curso.default.yml
+++ b/project/config/sync/core.entity_form_display.node.curso.default.yml
@@ -19,7 +19,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 2
+    weight: 1
     region: content
     settings:
       rows: 9
@@ -29,15 +29,7 @@ content:
     third_party_settings: {  }
   field_cosigo_del_curso:
     type: string_textfield
-    weight: 3
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_nombre_del_curso:
-    type: text_textfield
-    weight: 1
+    weight: 2
     region: content
     settings:
       size: 60
@@ -45,14 +37,14 @@ content:
     third_party_settings: {  }
   field_programa_del_curso:
     type: file_generic
-    weight: 4
+    weight: 3
     region: content
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
   field_relacionado_con_las_carrer:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 4
     region: content
     settings:
       match_operator: CONTAINS
@@ -70,6 +62,7 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_nombre_del_curso: true
   path: true
   promote: true
   status: true
